# glamx

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: eigen2.rs  eigen3.rs  lib.rs  matrix_ext.rs  pose2.rs  pose3.rs  rot2.rs  rot3.rs  svd2.rs  svd3.rs
