[package]
name = "glamx"
version = "0.2.0"
authors = ["Sébastien Crozet <developer@crozet.re>"]

description = "Extensions for glam: Pose2, Pose3, Rot2, and matrix utilities."
documentation = "https://docs.rs/glamx"
homepage = "https://dimforge.com"
repository = "https://github.com/dimforge/glamx"
readme = "README.md"
keywords = ["math", "geometry", "rotation", "pose", "glam"]
categories = ["mathematics", "game-development", "no-std"]
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
default = ["std", "all-types"]

# Standard library support
std = ["glam/std", "simba/std", "approx?/std"]

# Serialization features
serde = ["dep:serde", "glam/serde", "glamx-serde"]
glamx-serde = []  # Internal flag to enable serde derives on glamx types

# Bytemuck support
bytemuck = ["dep:bytemuck", "glam/bytemuck"]

# Nalgebra interop
nalgebra = ["dep:nalgebra"]

# Math library features
libm = ["glam/libm", "simba/libm_force", "num-traits/libm"]
nostd-libm = ["simba/libm", "glam/nostd-libm"]

# Approx is always available via re-export
approx = ["dep:approx", "glam/approx"]

# CUDA support (glam feature)
cuda = ["glam/cuda"]

# Scalar math (glam feature) - enabled by default in glam
scalar-math = ["glam/scalar-math"]

# Debug assertions for glam
debug-glam-assert = ["glam/debug-glam-assert"]
glam-assert = ["glam/glam-assert"]

# Fast math approximations
fast-math = ["glam/fast-math"]

# Rkyv serialization
rkyv = ["dep:rkyv", "glam/rkyv"]

# Mint interop
mint = ["glam/mint"]

# Rand support
rand = ["glam/rand"]

encase = ["glam/encase"]

# Type-gating features (mirror glam 0.33). Enabling any of these transitively
# enables the matching glam feature so the corresponding type aliases become
# available. glamx only adds extensions for floating-point types, so the
# integer-/size-type features are pure passthroughs.
all-types = ["float-types", "integer-types", "size-types", "glam/all-types"]
float-types = ["f64", "glam/float-types"]
integer-types = [
    "i8",
    "u8",
    "i16",
    "u16",
    "i32",
    "u32",
    "i64",
    "u64",
    "glam/integer-types",
]
size-types = ["isize", "usize", "glam/size-types"]

f64 = ["glam/f64"]
i8 = ["glam/i8"]
u8 = ["glam/u8"]
i16 = ["glam/i16"]
u16 = ["glam/u16"]
i32 = ["glam/i32"]
u32 = ["glam/u32"]
i64 = ["glam/i64"]
u64 = ["glam/u64"]
isize = ["glam/isize"]
usize = ["glam/usize"]

[dependencies]
glam = { version = "0.33", default-features = false }
simba = { version = "0.10", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
approx = { version = "0.5", default-features = false, optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
bytemuck = { version = "1", features = ["derive"], optional = true }
nalgebra = { version = "0.34", default-features = false, features = ["convert-glam032"], optional = true }
rkyv = { version = "0.8", optional = true, default-features = false }

[dev-dependencies]
approx = "0.5"
glam = { version = "0.33", features = ["approx"] }
